# elnet

./: Cargo.toml
src/: client_handler.rs  llm.rs  main.rs  tui.rs  ws_handler.rs
static/: index.html
