[package]
name = "elnet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
reqwest = "0.12.14"
serde = { version = "1.0.219", features = ["derive"] } 
serde_json = "1.0.140"
tokio = { version = "1", features = ["full"] }
ratatui = "0.26.1"
crossterm = "0.27.0"
tokio-tungstenite = "0.21.0"
futures-util = "0.3.30"
tungstenite = "0.21.0"
